<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XTime</string>
    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="login_progress_signing_in">Signing in…</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_request_failed">Failed to connect to XTime server</string>
    <string name="error_field_required">This field is required</string>
    <string name="auth_token_label">XTime</string>
    <!-- week overview activity -->
    <string name="title_week_overview">Week Overview</string>
    <string name="empty_week_overview">Week overview unavailable</string>
    <string name="hours_label">hours</string>
    <string name="locked">locked</string>
    <string name="action_sync">Refresh</string>
    <!-- day overview activity -->
    <string name="title_activity_day_overview">Day Overview</string>
    <string name="empty_day_overview">Empty time sheet</string>
    <string name="action_punch_in">Punch In</string>
    <string name="action_punch_out">Punch Out</string>
    <string name="action_new">New</string>
    <!-- Strings related to time cell editor -->
    <string name="title_activity_edit_time_cell">Edit</string>
    <string name="editor_project_label">Project:</string>
    <string name="editor_descr_label">Description:</string>
    <string name="editor_work_type_label">Work type:</string>
    <string name="editor_time_label">Time:</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="error_invalid_time">Please enter a valid time</string>
    <string name="toast_save_fail">Request failed</string>
    <string name="toast_delete_fail">Request failed</string>
    <string name="toast_work_types_fail">Failed to load work types</string>
    <string name="editor_busy">Sending request…</string>
    <!-- Strings related to month overview activity -->
    <string name="title_month_overview">Month Overview</string>
    <string name="empty_month_summary">Summary unavailable</string>
    <string name="grand_total_label">Grand total</string>
    <string name="action_approve">Approve</string>
    <string name="toast_approve_success">Time sheet approved</string>
    <string name="toast_approve_failure">Approval failed!</string>
    <string name="approve_confirm_msg">Are you sure you want to approve this month\'s time sheet?</string>
    <string name="approve_confirm_title">Confirm approval</string>
</resources>
