<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".dayoverview.DayOverviewActivity">
    <item
        android:id="@+id/punchIn"
        android:icon="@android:drawable/ic_media_play"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_punch_in"/>
    <item
        android:id="@+id/punchOut"
        android:icon="@android:drawable/ic_media_pause"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_punch_out"/>
    <item
        android:id="@+id/newItem"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_new"/>
</menu>
